JsonUtils: Use String.getBytes() instead of Files.writeString
Files.writeString() fails to convert UTF-16 strings...