@@ -8,12 +8,19 @@ import java.util.List;
 import java.util.Map;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.google.gson.JsonParseException;
 import com.google.gson.reflect.TypeToken;
 
 public class JsonUtils {
 
-    private static final Gson GSON = new Gson();
+    private static final Gson GSON;
+    
+    static {
+        GSON = new GsonBuilder()
+                .disableHtmlEscaping()
+                .create();
+    }
     
     private JsonUtils() {
     }
@@ -23,7 +30,7 @@ public class JsonUtils {
     }
     
     public static void writeJson(Object obj, Path file) throws IOException {
-        Files.writeString(file, toJson(obj), StandardCharsets.UTF_8);
+        Files.write(file, toJson(obj).getBytes(StandardCharsets.UTF_8));
     }
     
     public static Map<String, Object> parseToMap(String json) throws JsonParseException {
